Really fix #383
Signed-off-by: Matt Bentley <mbentley@mbentley.net>